fix offcanvas on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -168,3 +168,12 @@
                 transform: translateX(-100%);
               }
             }
+
+
+            @media only screen and (max-width:800px) {
+
+              table .venue.category{
+                display: none;
+              }
+
+            } 
