--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -119,3 +119,10 @@ body.overlay{
 .c-header-navigation li.current_page_item a{
     color: #ff6666;
 }
+
+@media only screen and (max-width:800px) {
+
+    nav{
+        right: 15px;
+    }
+} 
